[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/game/card/Foundation.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 69.7057, 94.852 )

[node name="Foundation" type="Position2D"]
modulate = Color( 1, 1, 1, 0.470588 )
z_index = -1
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="ClickArea" type="Area2D" parent="."]

[node name="Full" type="CollisionShape2D" parent="ClickArea"]
position = Vector2( 0.168121, 0 )
shape = SubResource( 1 )

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_ClickArea_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_ClickArea_mouse_exited"]
